allow compilation outside of Trino